# space_shooter

./: CMakeLists.txt  LICENSE  README.md
data/: spaceTexturePack.tps  spaceTexturePack.xml
src/: ComponentAnimation.hpp  ComponentControl.hpp  ComponentDamage.hpp  ComponentHitpoints.hpp  ComponentLifespan.hpp  ComponentParallax.hpp  ComponentPhysics.hpp  ComponentUI.hpp  Components.hpp  Events.hpp  Game.cpp  Game.hpp  SpriteSheet.hpp  SystemAnimation.cpp  SystemAnimation.hpp  SystemAsteroid.cpp  SystemAsteroid.hpp  SystemControl.cpp  SystemControl.hpp  SystemDisplay.cpp  SystemDisplay.hpp  SystemEvent.cpp  SystemEvent.hpp  SystemHitpoints.cpp  SystemHitpoints.hpp  SystemLifespan.cpp  SystemLifespan.hpp  SystemParallax.cpp  SystemParallax.hpp  SystemPhysics.cpp  SystemPhysics.hpp  Systems.hpp  compile_commands.json  main.cpp
